# yet-another-onnxruntime-extensions

./: .codespellrc  .gitignore  LICENSE  MANIFEST.in  README.md  clean.sh  make_doc.sh  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci_core.yml  ci_coverage.yml  ci_cuda.yml  ci_ortops.yml  docs.yml  mypy.yml  pyrefly.yml  spelling.yml  style.yml
cmake/: CMakeLists.txt  constants.cmake  load_externals.cmake
cmake/targets/: common.cmake  ortops_fused_kernel_cpu.cmake  ortops_fused_kernel_cpu2.cmake  ortops_fused_kernel_cuda.cmake  ortops_optim_cpu.cmake  ortops_optim_cpu2.cmake  ortops_optim_cuda.cmake  ortops_sparse_cpu.cmake  ortops_sparse_cpu2.cmake  unittest_cpp.cmake
cpp/: onnx_extended_helpers.cpp
cpp/include/common/: common_kernels.h
cpp/include/cuda/: common_kernels_cuda.h
docs/: conf.py  getting_started.rst  index.rst  sg_execution_times.rst
docs/api/: index.rst  yaourt.doc.rst  yaourt.plot.data.rst  yaourt.rst
docs/api/ortops/: index.rst  yaourt.ortops.cpu.rst  yaourt.ortops.doc.rst  yaourt.ortops.rst
docs/api/plot/: index.rst  yaourt.plot.benchmark.rst  yaourt.plot.rst
docs/api/reference/: evaluator.rst  index.rst
docs/api/tools/: index.rst  js_profile.rst
docs/auto_examples/: index.rst  plot_profile.codeobj.json  plot_profile.ipynb  plot_profile.py.md5  plot_profile.rst  sg_execution_times.rst
docs/examples/: README.txt  plot_profile.py
docs/examples/core/: README.txt  plot_onnxruntime_inference.py  plot_profile.py
ortops/optim/cpu/: ort_optim_cpu_lib.cc  ort_sparse.hpp
ortops/optim/cpu2/: ort_optim_cpu2_lib.cc  ort_sparse_lite.hpp
ortops/optim/cuda/: add_or_mul_shared_input.cu  add_or_mul_shared_input.h  addaddaddmulmulmul.cu  addaddmulmul.h  mul_mul_sigmoid.cu  mul_mul_sigmoid.h  negxplus1.h  ort_optim_cuda_lib.cu  replace_zero.cu  scatter_nd_of_shape.h  scatter_nd_of_shape_masked.cu  transpose_cast_2d.cu  transpose_cast_2d.h  tri_matrix.cu  (+1 more)
unittest/main/: test_doc.py  test_ext_test_case.py  test_pv_version.py
unittests/cpp/: test_make_string.cpp
unittests/main/: test_doc.py  test_documentation_examples.py  test_ext_test_case.py  test_extended_reference_evaluator.py  test_js_profile.py  test_ortops_cpu.py  test_pv_version.py  test_sparse_ops.py
unittests/ortops/: test_cuda_ops.py  test_sparse_ops.py  test_sparse_ops_cpu2.py
yaourt/: doc.py  ext_test_case.py  pv_version.py
yaourt/cpp/: yaourt_helpers.cpp
yaourt/ortops/: __init__.py  cpu.py  doc.py
yaourt/plot/: __init__.py  _data.py  benchmark.py
yaourt/reference/: __init__.py  evaluator.py
yaourt/tools/: __init__.py  js_profile.py
(+52 files in other folders)
