[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yet-another-onnxruntime-extensions"
version = "0.1.0"
description = "Experimental onnxruntime extensions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "onnx>=1.14",
    "onnxruntime>=1.18",
]

[project.optional-dependencies]
dev = [
    "black",
    "pandas",
    "pytest>=7",
    "pytest-coverage",
    "pytest-subtests",
    "ruff",
]
docs = [
    "black",
    "pydata-sphinx-theme",
    "sphinx>=7",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinx-issues",
    "sphinx-runpython",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yaourt*"]

[tool.pytest.ini_options]
testpaths = ["unittests"]

[tool.black]
line-length = 98
extend-exclude = '''.*clones*'''
skip-magic-trailing-comma = true

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    "build",
    "dist",
]

line-length = 98

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/
fixable = ["UP006", "UP035"]
unfixable = ["E731", "F401", "I001"]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    #"D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    #"I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    #"N", # pep8-naming
    #"NPY", # modern numpy
    #"PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    #"TID", # Disallow relative imports
    #"TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]

[tool.ruff.lint.extend-per-file-ignores]
"**" = [
    "B028", "B905",
    "C401", "C408", "C413",
    "PYI041",
    "RUF002", "RUF003", "RUF010", "RUF012", "RUF100",
    "SIM102", "SIM103", "SIM108", "SIM114", "SIM300", "SIM910",
    "UP006", "UP007", "UP015", "UP027", "UP031", "UP032", "UP034", "UP035", "UP037", "UP045",
]
"*/__init__.py" = ["F401"]
"docs/**" = ["RUF001", "SIM105"]
"unittests/**" = ["B023", "B904", "E731", "SIM300"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "yaourt.doc",
    "yaourt.ext_test_case",
]
ignore_errors = true

[tool.pyrefly]
project-includes = ["yaourt/**/*.py"]
project-excludes = [
    "yaourt/doc.py",
    "yaourt/ext_test_case.py",
]
